Refactor internals of security system and expose security and owner system to the API #6793. Also fixed/improved handling of the following issues related to the security system: - Fixed being unable to select QIO frequencies if the security system is disabled #7416 - Removed the security desk keeping track of the owner given that is already done by the security frequency - Made the security desk only expose being an owner object so that it is universally treated as private instead of requiring special casing - Fixed security overrides not always being taken into consideration and also prevent them from being able to widen security access (for example from private to protected) - Cleaned up a bit of hierarchy relating to block item classes and removed the need for a bunch of subclasses - Improved accuracy of whether an item's contents should drop when destroyed without a player context - Fixed opening a personal barrel as an item incrementing the chest open stat instead of the barrel open stat - Improved handling of how the allowProtection config option is used - Fixed owner name fallback attempts running only when there is a name found instead of only when there is no name found - Improve security recipe merging logic for calculating most restrictive security mode - Made computer security mode querying return the effective mode - Properly kick people from gui's they no longer have access to if they got removed from someone's trusted list - Made the security mode of the robit always be synced so there isn't a desync when it comes to the crafting and repair guis